--- a/src/type/types.css
+++ b/src/type/types.css
@@ -1,18 +1,18 @@
 body {
-    background-color: solid rgb(255, 255, 255);
+    background-color: lemonchiffon;
 }
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 325%;
+    font-size: 300%;
     font-weight: bold;
 }
 p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 225%;
+    font-size: 100%;
     font-weight: lighter;
 }
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgb(92, 169, 247);
     transition: 0.3s;
   }
   .card:hover {
