--- a/web/src/type/home.css
+++ b/web/src/type/home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lemonchiffon;
+    background-color: #fffbdc;
 }
 .card {
     box-shadow: 0 4px 8px 0 rgb(69, 161, 253);
