--- a/web/src/type/types.css
+++ b/web/src/type/types.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lemonchiffon;
+    background-color: #fffbdc;
 }
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
